--- a/VE_Open/XML/CAD/Makefile
+++ b/VE_Open/XML/CAD/Makefile
@@ -40,7 +40,8 @@ SRCS=\
    CADMaterial.cxx\
    CADNode.cxx\
    CADNodeTraverser.cxx\
-   CADPart.cxx
+   CADPart.cxx\
+   CADNodeAnimation.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_XMLLib -lVE_ShaderLib
