--- a/VE_Conductor/GUIPlugin/SConscript
+++ b/VE_Conductor/GUIPlugin/SConscript
@@ -4,7 +4,6 @@ pj = os.path.join
 Import('baseEnv')
 Import('Platform')
 Import('xerces')
-Import('wx')
 Import('ace_tao')
 Import('libPath')
 
@@ -25,7 +24,7 @@ framework_srcs = Split("""
    UIDialog.cpp 
 """)
 
-framework_srcs = map(lambda s: pj('#', 'VE_Conductor', 'Framework', s), framework_srcs)
+framework_srcs = map(lambda s: pj('#', 'VE_Conductor', 'GUIPlugin', s), framework_srcs)
 
 guiplugins_srcs = list()
 guiplugins_srcs.extend(framework_srcs)
@@ -36,19 +35,17 @@ env.Append(CPPPATH = ['#'])
 ##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
 ##env.Append(CPPPATH = pj( os.getenv('TAO_HOME',''), 'include') )
 env.Append(LIBPATH = libPath,
-              LIBS = 'VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib',
-                     'VE_CADLib', 'VE_ShaderLib',
-                     'VE_OpenModuleLib')
+              LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib',
+                     'VE_CADLib', 'VE_ShaderLib', 'VE_OpenModuleLib'])
 for lib in xerces:
-   env.Append(LIBS = lib)
-for lib in wx:
    env.Append(LIBS = lib)
 for lib in ace_tao:
    env.Append(LIBS = lib)
 env.ParseConfig('wx-config --cxxflags --libs')
 env.ParseConfig('vrjuggler-config --extra-libs')
+env.ParseConfig('flagpoll tao --cflags')
 
-targetLib = pj(libPath, 'GUIPluginLib'
+targetLib = pj(libPath, 'GUIPluginLib')
 env.SharedLibrary(target = targetLib, source = guiplugins_srcs)
 
 #env.Program(pj('#','bin',Platform,'VE_CE'), source = network_srcs)
