--- a/VE_Conductor/Utilities/SConscript
+++ b/VE_Conductor/Utilities/SConscript
@@ -4,7 +4,6 @@ pj = os.path.join
 Import('baseEnv')
 Import('Platform')
 Import('xerces')
-Import('wx')
 Import('ace_tao')
 Import('libPath')
 
@@ -23,13 +22,12 @@ frameworkutil_srcs = Split("""
    ROIDialog.cxx
    BaseDialog.cxx
 """)
-
 frameworkutil_srcs = map(lambda s: pj('#', 'VE_Conductor', 'Utilities', s), frameworkutil_srcs)
 srcs = frameworkutil_srcs
-srcs.append(pj('#', 'VE_Builder', 'Utilities', 'gui', 'spinctld.cpp')
+srcs.append(pj('#', 'VE_Builder', 'Utilities', 'gui', 'spinctld.cpp'))
 
-#guiplugins_srcs = list()
-#guiplugins_srcs.extend(framework_srcs)
+##guiplugins_srcs = list()
+##guiplugins_srcs.extend(framework_srcs)
 
 env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
@@ -37,18 +35,17 @@ env.Append(CPPPATH = ['#'])
 ##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
 ##env.Append(CPPPATH = pj( os.getenv('TAO_HOME',''), 'include') ) ##ADDITION
 env.Append(LIBPATH = libPath,
-              LIBS = 'VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib',
+              LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib',
                      'VE_CADLib', 'VE_ShaderLib',
-                     'VE_OpenModuleLib')
+                     'VE_OpenModuleLib'])
 for lib in xerces:
    env.Append(LIBS = lib)
 for lib in ace_tao:
    env.Append(LIBS = lib)
-for lib in wx:
-   env.Append(LIBS = lib)
 
 env.ParseConfig('wx-config --cxxflags --libs')
 env.ParseConfig('vrjuggler-config --extra-libs')
+env.ParseConfig('flagpoll tao --cflags')
 
 targetLib = pj(libPath, 'VE_Conductor_UtilitiesLib')
 env.SharedLibrary(target = targetLib, source = frameworkutil_srcs)
