forgot this file for the logo

--- a/VE_Xplorer/SceneGraph/VE_SceneGraph.vcproj
+++ b/VE_Xplorer/SceneGraph/VE_SceneGraph.vcproj
@@ -562,6 +562,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Text.cxx"
+				>
+			</File>
+			<File
 				RelativePath=".\Triangles.cxx"
 				>
 			</File>
