moved cfdFILE and cfdFileInfo to SceneGraph namespace

--- a/VE_Xplorer/SceneGraph/Makefile
+++ b/VE_Xplorer/SceneGraph/Makefile
@@ -51,6 +51,8 @@ endif
 SRCS=\
    cfdClone.cxx \
    cfdDCS.cxx \
+   cfdFILE.cxx \
+   cfdFileInfo.cxx \
    cfdGeode.cxx \
    cfdGroup.cxx \
    cfdNode.cxx \
