correct some compile problems with the new logo code as well as corrected some compile errors on linux with the new scenegraph changes

--- a/VE_Xplorer/SceneGraph/Makefile
+++ b/VE_Xplorer/SceneGraph/Makefile
@@ -65,8 +65,8 @@ SRCS=\
    cfdTempAnimation.cxx \
    vtkActorToOSG.cpp \
    vtkActorToPF.cxx \
-   Text.cxx \
-   Triangles.cxx
+   Triangles.cxx \
+   Text.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
