soooooo...there were still problems with the win build...I think they are fixed now

--- a/VE_Xplorer/GE/VE_Xplorer.vcproj
+++ b/VE_Xplorer/GE/VE_Xplorer.vcproj
@@ -107,7 +107,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="tao_pf_dbg|Win32"
+			Name="pf_dbg|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/bin/win32"
 			IntermediateDirectory="./VE_Xplorer/$(ConfigurationName)"
 			ConfigurationType="1"
@@ -203,7 +203,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="tao_osg_dbg|Win32"
+			Name="osg_dbg|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/bin/win32"
 			IntermediateDirectory="./VE_Xplorer/$(ConfigurationName)"
 			ConfigurationType="1"
@@ -297,7 +297,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="tao_osg_vep_dbg|Win32"
+			Name="osg_vep_dbg|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/bin/win32"
 			IntermediateDirectory="./VE_Xplorer/$(ConfigurationName)"
 			ConfigurationType="1"
@@ -391,7 +391,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="tao_osg_vep_cluster_dbg|Win32"
+			Name="osg_vep_cluster_dbg|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/bin/win32"
 			IntermediateDirectory="./VE_Xplorer/$(ConfigurationName)"
 			ConfigurationType="1"
