a couple of new features. conductor now loads a job when it is opened the initial code is in for passing a ves file in vis command line fixed a small bug in xmlreaderwriter conductor now changes dir when a new ves file is opened as well as xplorer
the xplorer dir stuff needs tested on windows but should work

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -131,7 +131,8 @@ SRCS=\
    TBActivateEH.cxx\
    TBUpdateSolutionEH.cxx\
    QCLoadFileEH.cxx\
-   StoredSceneEH.cxx
+   StoredSceneEH.cxx\
+   ChangeWorkingDirectoryEventHandler.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
