changing NURBSObject to calculate basis functions and derivatives. Not fully implemented (derivatives aren't calculated) but converted code over to work as before but with the new algorithm

--- a/VE_Xplorer/SceneGraph/NURBS/testNURBS/testNURBS.vcproj
+++ b/VE_Xplorer/SceneGraph/NURBS/testNURBS/testNURBS.vcproj
@@ -62,6 +62,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="osgd.lib Producerd.lib osgProducerd.lib"
+				OutputFile="$(OutDir)\$(ProjectName)d.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(OSGHOME)\lib&quot;"
 				GenerateDebugInformation="true"
