--- a/VE_Xplorer/SceneGraph/NURBS/testNURBS/testNURBS.vcproj
+++ b/VE_Xplorer/SceneGraph/NURBS/testNURBS/testNURBS.vcproj
@@ -17,7 +17,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(InputDir)"
+			OutputDirectory="$(VE_SUITE_HOME)/bin/win32"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
@@ -97,7 +97,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
+			OutputDirectory="$(VE_SUITE_HOME)/bin/win32"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
@@ -146,6 +146,7 @@
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				ProfileGuidedDatabase="$(OutDir)/$(TargetName).pgd"
 				ImportLibrary="$(OutDir)/VE_NURBS.lib"
 				TargetMachine="1"
 			/>
