--- a/VE_Xplorer/DefaultGraphicalPlugin/DefaultGraphicalPlugin.vcproj
+++ b/VE_Xplorer/DefaultGraphicalPlugin/DefaultGraphicalPlugin.vcproj
@@ -261,7 +261,7 @@
 		</Configuration>
 		<Configuration
 			Name="osg_vep_cluster_dbg|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="$(VE_SUITE_HOME)/bin/Plugins/GE/win32"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
