--- a/VE_Xplorer/TextureBased/VE_TextureBased.vcproj
+++ b/VE_Xplorer/TextureBased/VE_TextureBased.vcproj
@@ -4,6 +4,7 @@
 	Version="8.00"
 	Name="VE_TextureBased"
 	ProjectGUID="{398FF31C-58CE-4A0A-A288-BC3917FC9200}"
+	RootNamespace="VE_TextureBased"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -507,7 +508,7 @@
 		</Configuration>
 		<Configuration
 			Name="osg_vep_cluster_dbg|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
