changes to allow xplorer to build again. i believe there are still changes out on environment handler

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -132,7 +132,8 @@ SRCS=\
    TBUpdateSolutionEH.cxx\
    QCLoadFileEH.cxx\
    StoredSceneEH.cxx\
-   ChangeWorkingDirectoryEventHandler.cxx
+   ChangeWorkingDirectoryEventHandler.cxx\
+   ChangeBackgroundColorEventHandler.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
