minor enhancements to clean up feedback text and conductor auto submit functionality

--- a/VE_Conductor/GUIPlugin/Makefile
+++ b/VE_Conductor/GUIPlugin/Makefile
@@ -51,8 +51,8 @@ SRCS=\
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 #EXTRA_INCLUDES+= -I$(VJ_DEPS_DIR)/include
 #EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Builder/Translator
-#EXTRA_LDFLAGS+= -g
-#EXTRA_CXXFLAGS+= -g
+EXTRA_LDFLAGS+= -g
+EXTRA_CXXFLAGS+= -g
 #EXTRA_LDFLAGS+= -L$(VJ_DEPS_DIR)/lib
 #DSO_PLUGIN_DEPS+= $(shell vrjuggler-config --extra-libs)
 $(shell mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE))
