correcting tao_osg build

--- a/VE_CE/UnitWrapper/UnitWrapper.vcproj
+++ b/VE_CE/UnitWrapper/UnitWrapper.vcproj
@@ -186,6 +186,14 @@
 			<File
 				RelativePath=".\UnitWrapper.cxx"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
