--- a/VE_Open/VESOpen/VESOpen.vcproj
+++ b/VE_Open/VESOpen/VESOpen.vcproj
@@ -16,9 +16,9 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
-			ConfigurationType="1"
+			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			CharacterSet="2"
 			>
@@ -39,8 +39,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				RuntimeLibrary="0"
+				AdditionalIncludeDirectories="&quot;$(VE_SUITE_HOME)&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsrvcs&quot;"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;VE_OPEN_MODULE_LIBRARY"
+				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -57,8 +58,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/VESOpen.exe"
+				AdditionalDependencies="ace.lib TAO.lib TAO_CosNaming.lib TAO_PortableServer.lib TAO_AnyTypeCode.lib "
+				OutputFile="$(OutDir)/VE_OpenModule.dll"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;$(ACE_ROOT)\lib&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
