Scons: Works in RHEL_4/tao/osg/non-pat mode up to VE_Builder.

--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -25,6 +25,8 @@ srcs = Split("""
     cfdTempAnimation.cxx
     vtkActorToOSG.cpp
     vtkActorToPF.cxx
+    Triangles.cxx
+    Text.cxx
 """)
 
 srcs = map(lambda s: pj('#', 'VE_Xplorer', 'SceneGraph', s), srcs)
