--- a/VE_Xplorer/GraphicalPlugin/SConscript
+++ b/VE_Xplorer/GraphicalPlugin/SConscript
@@ -49,6 +49,6 @@ env.ParseConfig('flagpoll gmtl --cflags')
 env.ParseConfig('wx-config --cxxflags --libs')
 env.ParseConfig('vrjuggler-config --libs --extra-libs --includes')
 
-targetLib = pj(libPath, 'VE_GraphicalPlugin%s%s%s' %(exec_tag, osg_tag,
+targetLib = pj(libPath, 'GraphicalPlugin%s%s%s' %(exec_tag, osg_tag,
                                                 patented_tag))
 env.SharedLibrary(target = targetLib, source = srcs)
