--- a/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
@@ -3,8 +3,9 @@ pj = os.path.join
 
 Import('baseEnv')
 Import('Platform')
-Import( 'vtk' )
-Import( 'boost' )
+##Import('vtk')
+##Import('boost')
+Import('libPath')
 
 srcs = Split("""
    flowTexture.cpp 
@@ -18,16 +19,18 @@ srcs = map(lambda s: pj('#', 'VE_Builder', 'vtkTo3DTexture', 'tcGUI', s), srcs)
 env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
 env.Append(CPPPATH = ['#'])
-env.Append(CPPPATH = pj( os.getenv('VTK_BASE_DIR',''), 'include', 'vtk') )
+##env.Append(CPPPATH = pj( os.getenv('VTK_BASE_DIR',''), 'include', 'vtk') )
 env.Append(CPPPATH = pj( os.getenv('VJ_DEPS_DIR',''), 'include') )
-env.Append(LIBPATH = '#',
+env.Append(LIBPATH = libPath,
               LIBS = 'VE_UtilLib')
 
-for lib in vtk:
-   env.Append(LIBS = lib)
-for lib in boost:
-   env.Append(LIBS = lib)
-env.ParseConfig( 'wx-config --cxxflags --libs' )
+##for lib in vtk:
+##   env.Append(LIBS = lib)
+##for lib in boost:
+##   env.Append(LIBS = lib)
+env.ParseConfig('flagpoll vtk --libs --cflags')
+env.ParseConfig('flagpoll boost --libs')
+env.ParseConfig('wx-config --cxxflags --libs')
 env.ParseConfig( 'vrjuggler-config --libs --extra-libs --includes' )
 env.ParseConfig( 'vpr-config --libs --extra-libs --includes' )
 
